--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
                                     aria-valuemax="100"></div>
                             </div>
                             <div class="skill-name">
-                                <p>React js</p>
-                                <p>40%</p>
+                                <p>MERN Stack</p>
+                                <p>30%</p>
                             </div>
                             <div class="progress">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0"
@@ -269,7 +269,7 @@
                 </div>
                 <div class="timeline-item left wow slideInRight" data-wow-delay="0.1s">
                     <div class="timeline-text">
-                        <div class="timeline-date">2023 - Present</div>
+                        <div class="timeline-date">2023 - 2024</div>
                         <h2>Magnoli IT solutions</h2>
                         <h4>Senior React Native Developer</h4>
                         <p>
@@ -277,16 +277,15 @@
                         </p>
                     </div>
                 </div>
-                <!--<div class="timeline-item left wow slideInLeft" data-wow-delay="0.1s">-->
-                <!--    <div class="timeline-text">-->
-                <!--        <div class="timeline-date">2045 - 2050</div>-->
-                <!--        <h2>Web Developer</h2>-->
-                <!--        <h4>Soft Agency, San Francisco, CA</h4>-->
-                <!--        <p>-->
-                <!--            Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit-->
-                <!--            semper pretium.-->
-                <!--        </p>-->
-                <!--    </div>-->
+                <div class="timeline-item right wow slideInLeft" data-wow-delay="0.1s">
+                   <div class="timeline-text">
+                       <div class="timeline-date">2024 - 2025</div>
+                       <h2>Wolfmatrix</h2>
+                       <h4>Kathmandu, Nepal</h4>
+                       <p>
+                           Australian based outsourcing company primarily working for KIC app, Australia.
+                       </p>
+                   </div>
                 <!--</div>-->
                 <!--<div class="timeline-item right wow slideInRight" data-wow-delay="0.1s">-->
                 <!--    <div class="timeline-text">-->
@@ -801,6 +800,7 @@
                         <a href="https://www.instagram.com/roitpak/"><i class="fab fa-instagram"></i></a>
                         <a href="https://www.linkedin.com/in/rohit-pakhrin-86242a171/"><i
                                 class="fab fa-linkedin-in"></i></a>
+                        <a href="https://github.com/roitpak"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
             </div>
