add netflity form

--- a/index.html
+++ b/index.html
@@ -691,8 +691,8 @@
                         <div class="col-md-8">
                             <div class="contact-form">
                                 <div id="success"></div>
-                                <form name="sentMessage" id="contactForm" novalidate="novalidate" data-netlify="true"
-                                    netlify-honeypot="bot-field">
+                                <form netlify name="sentMessage" id="contactForm" novalidate="novalidate"
+                                    data-netlify="true" netlify-honeypot="bot-field">
                                     <div class="control-group">
                                         <input type="text" class="form-control" id="name" placeholder="Your Name"
                                             required="required"
