--- a/index.html
+++ b/index.html
@@ -695,25 +695,25 @@
                                     netlify-honeypot="bot-field">
                                     <input type="hidden" name="form-name" value="sentMessage" />
                                     <div class="control-group">
-                                        <input type="text" class="form-control" id="name" placeholder="Your Name"
-                                            required="required"
+                                        <input type="text" class="form-control" id="name" name="name"
+                                            placeholder="Your Name" required="required"
                                             data-validation-required-message="Please enter your name" />
                                         <p class="help-block"></p>
                                     </div>
                                     <div class="control-group">
-                                        <input type="email" class="form-control" id="email" placeholder="Your Email"
-                                            required="required"
+                                        <input type="email" class="form-control" id="email" name="email"
+                                            placeholder="Your Email" required="required"
                                             data-validation-required-message="Please enter your email" />
                                         <p class="help-block"></p>
                                     </div>
                                     <div class="control-group">
-                                        <input type="text" class="form-control" id="subject" placeholder="Subject"
-                                            required="required"
+                                        <input type="text" class="form-control" id="subject" name="subject"
+                                            placeholder="Subject" required="required"
                                             data-validation-required-message="Please enter a subject" />
                                         <p class="help-block"></p>
                                     </div>
                                     <div class="control-group">
-                                        <textarea class="form-control" id="message" placeholder="Message"
+                                        <textarea class="form-control" id="message" name="message" placeholder="Message"
                                             required="required"
                                             data-validation-required-message="Please enter your message"></textarea>
                                         <p class="help-block"></p>
