--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Rohit Pakhrin</title>
+    <title>Dharmendra Yadav</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free Website Template" name="keywords">
-    <meta content="Free Website Template" name="description">
+    <meta content="Dharmendra Yadav, Full Stack Developer, React Developer, Portfolio" name="keywords">
+    <meta content="Dharmendra Yadav - Full Stack Developer specializing in React.js, React Native, Node.js, and modern web technologies" name="description">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -31,7 +31,7 @@
     <!-- Nav Bar Start -->
     <div class="navbar navbar-expand-lg bg-light navbar-light">
         <div class="container-fluid">
-            <a href="index.html" class="navbar-brand">Rohit Pakhrin</a>
+            <a href="index.html" class="navbar-brand">Dharmendra Yadav</a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -63,10 +63,10 @@
                     <div class="hero-content">
                         <div class="hero-text">
                             <p>I'm</p>
-                            <h1>Rohit Pakhrin</h1>
+                            <h1>Dharmendra Yadav</h1>
                             <h2></h2>
-                            <div class="typed-text">Mobile Developer, Front-End Developer,
-                                Apps Developer</div>
+                            <div class="typed-text">Full Stack Developer, Front-End Developer,
+                                React Developer</div>
                         </div>
                         <!-- <div class="hero-btn">
                             <a class="btn" href="">Hire Me</a>
@@ -98,17 +98,16 @@
                     <div class="about-content">
                         <div class="section-header text-left">
                             <p>Learn About Me</p>
-                            <h2>5 Years Experience</h2>
+                            <h2>2+ Years Experience</h2>
                         </div>
                         <div class="about-text">
                             <p>
-                                I have been working as a developer since 4 years and have acquired many knowledges along
-                                the way. Some foremost development skills are,
+                                Front-end–focused Full Stack Developer with 2+ years of experience building responsive, high-performance web and mobile applications using React.js, React Native, Node.js, and modern JavaScript frameworks. Skilled in intuitive UI design, API integration, and performance optimization.
                             </p>
                         </div>
                         <div class="skills">
                             <div class="skill-name">
-                                <p>React Native</p>
+                                <p>React.js</p>
                                 <p>85%</p>
                             </div>
                             <div class="progress">
@@ -116,27 +115,27 @@
                                     aria-valuemax="100"></div>
                             </div>
                             <div class="skill-name">
-                                <p>MERN Stack</p>
-                                <p>30%</p>
+                                <p>React Native</p>
+                                <p>80%</p>
                             </div>
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0"
+                                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
                                     aria-valuemax="100"></div>
                             </div>
                             <div class="skill-name">
-                                <p>Android Developement</p>
-                                <p>50%</p>
+                                <p>Node.js</p>
+                                <p>75%</p>
                             </div>
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0"
+                                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0"
                                     aria-valuemax="100"></div>
                             </div>
                             <div class="skill-name">
-                                <p>Flutter</p>
-                                <p>30%</p>
+                                <p>MongoDB</p>
+                                <p>70%</p>
                             </div>
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0"
+                                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
                                     aria-valuemax="100"></div>
                             </div>
                         </div>
@@ -163,9 +162,9 @@
                             <i class="fa fa-laptop"></i>
                         </div>
                         <div class="service-text">
-                            <h3>React Native Development</h3>
+                            <h3>Front-End Development</h3>
                             <p>
-                                I have worked on different projects in React Native.
+                                Building responsive, high-performance web applications using React.js, Next.js, and modern JavaScript frameworks.
                             </p>
                         </div>
                     </div>
@@ -176,9 +175,9 @@
                             <i class="fa fa-laptop-code"></i>
                         </div>
                         <div class="service-text">
-                            <h3>MERN</h3>
+                            <h3>Full Stack Development</h3>
                             <p>
-                                I have completed few projects on MERN stack.
+                                Developing end-to-end solutions using React.js, Node.js, Express.js, and MongoDB.
                             </p>
                         </div>
                     </div>
@@ -189,9 +188,9 @@
                             <i class="fab fa-android"></i>
                         </div>
                         <div class="service-text">
-                            <h3>Android Development</h3>
+                            <h3>Mobile Development</h3>
                             <p>
-                                I started intern in Android development and worked for few years in same platform.
+                                Creating cross-platform mobile applications using React Native with intuitive UI design and API integration.
                             </p>
                         </div>
                     </div>
@@ -202,9 +201,9 @@
                             <i class="fab fa-apple"></i>
                         </div>
                         <div class="service-text">
-                            <h3>Flutter</h3>
+                            <h3>UI/UX Design</h3>
                             <p>
-                                I have completed few courses in flutter.
+                                Designing intuitive user interfaces using Tailwind CSS, SCSS, and Ant Design for optimal user experience.
                             </p>
                         </div>
                     </div>
@@ -237,57 +236,31 @@
                 <!--</div>-->
                 <div class="timeline-item left wow slideInLeft" data-wow-delay="0.1s">
                     <div class="timeline-text">
-                        <div class="timeline-date">2024 - 2025</div>
-                        <h2>Wolfmatrix</h2>
-                        <h4>Senior React native developer</h4>
+                        <div class="timeline-date">MM/YYYY - Present</div>
+                        <h2>NavaNexa.Tech PVT. LTD</h2>
+                        <h4>Full Stack Developer</h4>
                         <p>
-                            Australian based outsourcing company primarily working for KIC app, Australia.
+                            Built and maintained scalable mobile apps using React Native & Node.js. Developed responsive, cross-browser-compatible UI components. Integrated REST APIs. Implemented Redux for state management. Used Tailwind CSS and Ant Design for reusable UI components.
                         </p>
                     </div>
                 </div>
                 <div class="timeline-item right wow slideInRight" data-wow-delay="0.1s">
                     <div class="timeline-text">
-                        <div class="timeline-date">2023 - 2024</div>
-                        <h2>Magnoli IT solutions</h2>
-                        <h4>Senior React Native Developer</h4>
+                        <div class="timeline-date">07/2023 - 08/2023</div>
+                        <h2>5G IoT, Chandigarh, India</h2>
+                        <h4>College Intern</h4>
                         <p>
-                            Founded in February 2021, Magnolia IT solutions is a premier IT organization driven towards
-                            providing the technology era through solutions.
+                            Worked on collision detection and avoidance systems. Used ultrasonic sensors & HC-05 Bluetooth module.
                         </p>
                     </div>
                 </div>
                 <div class="timeline-item left wow slideInLeft" data-wow-delay="0.1s">
                     <div class="timeline-text">
-                        <div class="timeline-date">2021 - 2023</div>
-                        <h2>Virtuosway</h2>
-                        <h4>Executive React Native Developer</h4>
+                        <div class="timeline-date">05/2023 - 07/2023</div>
+                        <h2>Nepal Telecom, Nepal</h2>
+                        <h4>Analyst Intern</h4>
                         <p>
-                            A US based IT company with passionate and caffeinated team of engineers and designers to
-                            provide IT services.
-                        </p>
-                    </div>
-                </div>
-                <div class="timeline-item right wow slideInRight" data-wow-delay="0.1s">
-                    <div class="timeline-text">
-                        <div class="timeline-date">2021 - 2021</div>
-                        <h2>Connecting Soft Nepal</h2>
-                        <h4>Mobile Developer</h4>
-                        <p>
-                            Connecting Soft has fast become a dynamic and fast moving company in Client Solution
-                            Management in Information Technology in Nepal and has proven itself to be one of the market
-                            leaders.
-                        </p>
-                    </div>
-                </div>
-                <div class="timeline-item left wow slideInLeft" data-wow-delay="0.1s">
-                    <div class="timeline-text">
-                        <div class="timeline-date">2017 - 2021</div>
-                        <h2>Shiran Technologies - F1soft International</h2>
-                        <h4>Mobile Developer</h4>
-                        <p>
-                            Company of F1Soft Group, which is established for developing and deploying various
-                            enterprise-based solutions.
-
+                            Conducted network performance analysis. Customer behavior analysis. Revenue forecasting.
                         </p>
                     </div>
                 </div>
@@ -794,21 +767,16 @@
             <div class="container-fluid">
                 <div class="container">
                     <div class="footer-info">
-                        <h2>Rohit Pakhrin</h2>
-                        <h3>Kathmandu, Nepal</h3>
+                        <h2>Dharmendra Yadav</h2>
+                        <h3>Kupondole, Nepal</h3>
                         <div class="footer-menu">
-                            <!-- <p>+012 345 67890</p> -->
-                            <p>roitpak@gmail.com</p>
+                            <p>+977 9818722214</p>
+                            <p>davidyadav9818@gmail.com</p>
                         </div>
                         <div class="footer-social">
-                            <!-- <a href=""><i class="fab fa-twitter"></i></a> -->
-                            <a href="https://www.facebook.com/rohit.pakhrin/"><i class="fab fa-facebook-f"></i></a>
-                            <a href="https://www.youtube.com/channel/UCsjnV66huSgX10mbQRw9nOQ"><i
-                                    class="fab fa-youtube"></i></a>
-                            <a href="https://www.instagram.com/roitpak/"><i class="fab fa-instagram"></i></a>
-                            <a href="https://www.linkedin.com/in/rohit-pakhrin-86242a171/"><i
-                                    class="fab fa-linkedin-in"></i></a>
-                            <a href="https://github.com/roitpak"><i class="fab fa-github"></i></a>
+                            <a href="https://linkedin.com/in/dharmendra-yadav-b68971231"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="https://github.com/davidyadav001"><i class="fab fa-github"></i></a>
+                            <a href="https://leetcode.com/u/7766080235"><i class="fas fa-code"></i></a>
                         </div>
                     </div>
                 </div>
