--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-6">
                     <div class="about-img">
-                        <img src="img/about.jpg" alt="Image">
+                        <img src="img/about.jpg?v=2" alt="Image">
                     </div>
                 </div>
                 <div class="col-lg-6">
